--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello to my Website!</h1>
+    <h1 style="color:blue;">Hello to my Website!</h1>
     <h5>This truly is a great website</h5>
 </body>
 </html>
