--- a/hello.html
+++ b/hello.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1 {
+            color:blue;
+        }
+    </style>
 </head>
 <body>
-    <h1 style="color:blue;">Hello to my Website! grape</h1>
+    <h1>Hello to my Website! grape</h1>
     <h5>This truly is a great website</h5>
 </body>
 </html>
